--- a/index.html
+++ b/index.html
@@ -64,34 +64,36 @@
             <div class="articles">
 
 
-
-
-
                 <div class="card">
                     <div class="cart-body">
-                        <div class="card-image">
+                        <figure class="card-image">
                             <img src="./images/pet3.jpeg" alt="Picture of dog food">
+                            <figcaption>Dog Food - High Quality Ingredients</figcaption>
+
                             <div class="article-type">
                                 <p>Dog</p>
                             </div>
-                        </div>
+                        </figure>
                         <div class="card-title">
                             <h3>Dog toys: How to pick the best and the safest</h3>
                         </div>
-
                     </div>
-
-
-
                 </div>
+                
+
+
+
+
                 <div class="card">
                     <div class="cart-body">
-                        <div class="card-image">
+                        <figure class="card-image">
                             <img src="./images/pet1.jpeg" alt="Picture of a dog with his toys">
+                            <figcaption>Dog - with his toys</figcaption>
+
                             <div class="article-type">
                                 <p>Dog</p>
                             </div>
-                        </div>
+                        </figure>
                         <div class="card-title">
                             <h3>Dog toys: How to pick the best and the safest</h3>
                         </div>
@@ -101,14 +103,17 @@
 
 
                 </div>
+
                 <div class="card">
                     <div class="cart-body">
-                        <div class="card-image">
+                        <figure class="card-image">
                             <img src="./images/pet2.jpeg" alt="Picture of a beautiful dog">
+                            <figcaption>Beautiful - dog</figcaption>
+
                             <div class="article-type">
                                 <p>Dog</p>
                             </div>
-                        </div>
+                        </figure>
                         <div class="card-title">
                             <h3>Dog toys: How to pick the best and the safest</h3>
                         </div>
